--- a/ClientsSpringCloud.properties
+++ b/ClientsSpringCloud.properties
@@ -1,3 +1,3 @@
 server.port=8005
 
-configuracion.texto=Configurando el ambiente Desarrollo
+configuracion.texto=Configurando el ambiente por defecto
