--- a/ClientsSpringCloud-dev.properties
+++ b/ClientsSpringCloud-dev.properties
@@ -1,3 +1,5 @@
 server.port=8005
 
 configuracion.texto=Configurando el ambiente de Desarrollo(DEV)
+configuracion.autor.nombre=Karim
+configuracion.autor.email=karim.lopez@gmail.com
