--- a/ClientsSpringCloud-prod.properties
+++ b/ClientsSpringCloud-prod.properties
@@ -1,3 +1,5 @@
+server.port=8007
+
 configuracion.texto=Configurando el ambiente de Produccion(PROD)
-configuracion.autor.nombre=Karim
-configuracion.autor.email=karim.lopez@gmail.com
+configuracion.autor.nombre=Karim Lopez
+configuracion.autor.email=karim.lopez-prod@gmail.com
