--- a/ClientsSpringCloud-dev.properties
+++ b/ClientsSpringCloud-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando el ambiente de Desarrollo(DEV)
-configuracion.autor.nombre=Karim
-configuracion.autor.email=karim.lopez@gmail.com
+configuracion.autor.nombre=Yisus
+configuracion.autor.email=yisus.lopez-dev@gmail.com
